fix: labtop view contact links gap

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -38,6 +38,12 @@
     color: rgb(var(--text-success));
   }
 
+  .contact-link-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.750rem;
+  }
+
   .contact-link {
     height: 4.0625rem;
     padding: 0.75rem 0.875rem;
